// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectFailureMessages getErrors When no options passed should match snapshot 1`] = `
{
  "field_1": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_1_failure message 2",
    },
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_1_failure message 3",
    },
  ],
  "field_2": [
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": "group_1",
      "message": "field_2_failure message 1",
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": "group_1",
      "message": "field_2_failure message 3",
    },
  ],
}
`;

exports[`collectFailureMessages getErrors When specific field requested Should match snapshot 1`] = `
[
  SummaryFailure {
    "fieldName": "field_1",
    "groupName": undefined,
    "message": "field_1_failure message 2",
  },
  SummaryFailure {
    "fieldName": "field_1",
    "groupName": undefined,
    "message": "field_1_failure message 3",
  },
]
`;

exports[`collectFailureMessages getErrors When specific field requested Should match snapshot 2`] = `
[
  SummaryFailure {
    "fieldName": "field_2",
    "groupName": "group_1",
    "message": "field_2_failure message 1",
  },
  SummaryFailure {
    "fieldName": "field_2",
    "groupName": "group_1",
    "message": "field_2_failure message 3",
  },
]
`;

exports[`collectFailureMessages getErrors When specific field requested Should match snapshot 3`] = `[]`;

exports[`collectFailureMessages getErrorsByGroup Should match snapshot 1`] = `
{
  "field_1": [],
  "field_2": [
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": "group_1",
      "message": "field_2_failure message 1",
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": "group_1",
      "message": "field_2_failure message 3",
    },
  ],
}
`;

exports[`collectFailureMessages getErrorsByGroup with field name Should match snapshot 1`] = `[]`;

exports[`collectFailureMessages getErrorsByGroup with field name Should match snapshot 2`] = `
[
  SummaryFailure {
    "fieldName": "field_2",
    "groupName": "group_1",
    "message": "field_2_failure message 1",
  },
  SummaryFailure {
    "fieldName": "field_2",
    "groupName": "group_1",
    "message": "field_2_failure message 3",
  },
]
`;

exports[`collectFailureMessages getErrorsByGroup with field name Should match snapshot 3`] = `[]`;

exports[`collectFailureMessages getWarnings When no options passed should match snapshot 1`] = `
{
  "field_2": [
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": "field_2_warning message 2",
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": "group_1",
      "message": "field_2_warning message 3",
    },
  ],
}
`;

exports[`collectFailureMessages getWarnings When specific field requested Should match snapshot 1`] = `[]`;

exports[`collectFailureMessages getWarnings When specific field requested Should match snapshot 2`] = `
[
  SummaryFailure {
    "fieldName": "field_2",
    "groupName": undefined,
    "message": "field_2_warning message 2",
  },
  SummaryFailure {
    "fieldName": "field_2",
    "groupName": "group_1",
    "message": "field_2_warning message 3",
  },
]
`;

exports[`collectFailureMessages getWarnings When specific field requested Should match snapshot 3`] = `[]`;

exports[`collectFailureMessages getWarningsByGroup Should match snapshot 1`] = `
{
  "field_2": [
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": "group_1",
      "message": "field_2_warning message 3",
    },
  ],
}
`;

exports[`collectFailureMessages getWarningsByGroup with field name Should match snapshot 1`] = `[]`;

exports[`collectFailureMessages getWarningsByGroup with field name Should match snapshot 2`] = `
[
  SummaryFailure {
    "fieldName": "field_2",
    "groupName": "group_1",
    "message": "field_2_warning message 3",
  },
]
`;

exports[`collectFailureMessages getWarningsByGroup with field name Should match snapshot 3`] = `[]`;
